--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,12 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 rand = "0.8"
+fxhash = "0.2.1"
+mimalloc = { version = "0.1.17", default-features = false }
 
 serde_json = "1.0"
+
+[profile.release]
+codegen-units = 1
+panic = "abort"
+lto = "fat"
