save before rewriting makemove

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0", features = ["derive"] }
 rand = "0.8"
 fxhash = "0.2.1"
 mimalloc = { version = "0.1.17", default-features = false }
+dhat = "0.3.2"
 
 serde_json = "1.0"
 
@@ -17,3 +18,8 @@ serde_json = "1.0"
 codegen-units = 1
 panic = "abort"
 lto = "fat"
+debug = true
+
+[features]
+dhat-heap = []
+mimalloc = []
