--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ mimalloc = { version = "0.1.17", default-features = false }
 serde_json = "1.0"
 
 [profile.release]
+debug = true
 codegen-units = 1
 panic = "abort"
 lto = "fat"
