--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,13 @@ fxhash = "0.2.1"
 
 serde_json = "1.0"
 
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "movegen"
+harness = false
+
 [profile.release]
 codegen-units = 1
 panic = "abort"
