build cutechess cli

--- a/.github/workflows/engine-test.yml
+++ b/.github/workflows/engine-test.yml
@@ -70,8 +70,19 @@ jobs:
 
       - name: Install cutechess-cli
         run: |
+          # Install dependencies for building cutechess
           sudo apt-get update
-          sudo apt-get install -y cutechess
+          sudo apt-get install -y qt5-qmake qtbase5-dev
+
+          # Clone and build cutechess
+          git clone https://github.com/cutechess/cutechess.git
+          cd cutechess
+          qmake
+          make -j$(nproc)
+
+          # Make cli available
+          sudo cp projects/cli/cutechess-cli /usr/local/bin/
+          cutechess-cli --version
 
       - name: Download baseline engine
         uses: actions/download-artifact@v4
