--- a/.github/workflows/engine-test.yml
+++ b/.github/workflows/engine-test.yml
@@ -72,16 +72,16 @@ jobs:
         run: |
           # Install dependencies for building cutechess
           sudo apt-get update
-          sudo apt-get install -y qt5-qmake qtbase5-dev
+          sudo apt-get install -y cmake g++ qtbase5-dev libqt5svg5-dev
 
           # Clone and build cutechess
           git clone https://github.com/cutechess/cutechess.git
           cd cutechess
-          qmake
+          cmake .
           make -j$(nproc)
 
           # Make cli available
-          sudo cp projects/cli/cutechess-cli /usr/local/bin/
+          sudo cp cutechess-cli /usr/local/bin/
           cutechess-cli --version
 
       - name: Download baseline engine
