--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ criterion = "0.5"
 name = "movegen"
 harness = false
 
+[[bench]]
+name = "evaluate"
+harness = false
+
 [profile.release]
 codegen-units = 1
 panic = "abort"
