Add silent mode to Evaluator for controlled output
- Introduced a `silent` field in the `Evaluator` struct to manage output verbosity.
- Added a `set_silent` method to allow toggling of silent mode.
- Wrapped output statements in conditional checks to respect the silent mode setting.
- Cleaned up commented-out code related to cutoff testing for clarity.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ harness = false
 name = "evaluate"
 harness = false
 
+[[bench]]
+name = "cutoff"
+harness = false
+
 [profile.release]
 codegen-units = 1
 panic = "abort"
